@@ -45,6 +45,10 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <legal>
             <![CDATA[[INFO] Any downloads listed may be third party software. Microsoft grants you no rights for third party software.]]></legal>
+        <javaModulesSurefireArgLine>
+            --add-exports com.azure.core/com.azure.core.implementation.jackson=ALL-UNNAMED
+            --add-opens com.azure.monitor.ingestion/com.azure.monitor.ingestion=ALL-UNNAMED
+        </javaModulesSurefireArgLine>
     </properties>
 
     <developers>
@@ -94,13 +98,13 @@
         <dependency>
             <groupId>io.projectreactor</groupId>
             <artifactId>reactor-test</artifactId>
-            <version>3.4.22</version> <!-- {x-version-update;io.projectreactor:reactor-test;external_dependency} -->
+            <version>3.4.23</version> <!-- {x-version-update;io.projectreactor:reactor-test;external_dependency} -->
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>com.azure</groupId>
             <artifactId>azure-identity</artifactId>
-            <version>1.5.5</version> <!-- {x-version-update;com.azure:azure-identity;dependency} -->
+            <version>1.6.0</version> <!-- {x-version-update;com.azure:azure-identity;dependency} -->
             <scope>test</scope>
         </dependency>
     </dependencies>
